--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Free English</string>
+    <string name="take_the_test">TAKE THE TEST</string>
 </resources>
