--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Free English</string>
     <string name="take_the_test">TAKE THE TEST</string>
+    <string name="congrats">CONGRATS!</string>
+    <string name="almost">ALMOST DID IT...</string>
 </resources>
