DB queries have been added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Free English</string>
     <string name="take_the_test">TAKE THE TEST</string>
+    <string name="my_total_progress">MY TOTAL PROGRESS</string>
 </resources>
