--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,5 @@
     <string name="app_name">Free English</string>
     <string name="take_the_test">TAKE THE TEST</string>
     <string name="congrats">CONGRATS!</string>
-    <string name="almost">ALMOST DID IT...</string>
+    <string name="almost">ALMOST DID IT…</string>
 </resources>
